syntax = "proto3";

package sessions;

service Sessions {
    rpc CheckOverlappingSession(CheckOverlappingSessionRequest) returns (CheckOverlappingSessionResponse);
}

message CheckOverlappingSessionRequest {
    int64 startDate = 1;
    int64 endDate = 2;
    string startAt = 3;
    string endAt = 4;
    string learningDays = 5;
    string ownerId = 6;
}

message CheckOverlappingSessionResponse {
    bool hasSession = 1;
}